[package]
name = "game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
bevy = "0.12.1"
bevy-async-task = "1.3.1"
futures = "0.3.30"
serde = {version="1.0.196", features=["derive"]}
serde_json = "1.0.113"
wasm-bindgen = "0.2.91"
ws_stream_wasm = "0.7.4"

[profile.dev.package."*"]
opt-level = 3
